--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>World's Best Lasagna</h1>
-    <img src="./images/worlds-best-lasagna.jpg" alt="worlds-best-lasagna pic">
+    <img src="./lasagna-images//worlds-best-lasagna.jpg" alt="worlds-best-lasagna pic">
 
     <h2>Description</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
@@ -88,30 +88,30 @@
 
     <ol>
         <li>Gather all your ingredients.</li>
-        <img src="./images/ingredients.jpg" alt="ingredients pic">
+        <img src="./lasagna-images/" alt="ingredients pic">
 
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
-        <img src="./images/meat-sausage.jpg" alt="pot of ground beef, onion and garlic">
+        <img src="./lasagna-images//meat-sausage.jpg" alt="pot of ground beef, onion and garlic">
         
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
-        <img src="./images/noodles.jpg" alt="pot of boiling noodles">
+        <img src="./lasagna-images//noodles.jpg" alt="pot of boiling noodles">
 
         <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
-        <img src="./images/ricotta.jpg" alt="bowl of mixed ricotta cheese">
+        <img src="./lasagna-images//ricotta.jpg" alt="bowl of mixed ricotta cheese">
 
         <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
 
         <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
-        <img src="./images/assembly.jpg" alt="lasagna assembly">
+        <img src="./lasagna-images//" alt="lasagna assembly">
 
         <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
-        <img src="./images/foil.jpg" alt="lasagna covered with foil">
+        <img src="./lasagna-images//foil.jpg" alt="lasagna covered with foil">
 
         <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
-        <img src="./images/bake.jpg" alt="baked lasagna">
+        <img src="./lasagna-images//bake.jpg" alt="baked lasagna">
 
         <li>Rest lasagna for 15 minutes before serving.</li>
-        <img src="./images/serving.jpg" alt="a plate of lasagna">
+        <img src="./lasagna-images//serving.jpg" alt="a plate of lasagna">
 
     </ol>
 
