--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     
     <h1>Odin Recipes</h1>\
-    <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">World's Best Lasagna</a>
-
+    <ul>
+    <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+    <li><a href="recipes/chocolate-icecream.html">Very Chocolate Ice Cream</a></li>
+    <li><a href="recipes/banana-pancakes.html">Banana Pancakes</a></li>
+  </ul>
 </body>
 </html>
